changed z-index of modal overlay to fix issue with poster

--- a/styles/_imageModal.scss
+++ b/styles/_imageModal.scss
@@ -21,6 +21,9 @@
   }
 }
 
+.ReactModal__Overlay.ReactModal__Overlay--after-open {
+  z-index: 99;
+}
 .ReactModal__Content.ReactModal__Content--after-open {
   border-radius: 1rem !important;
   box-shadow: 0px 10px 20px rgba($color: #000000, $alpha: 0.25);
